wrap up bedrock mining drill